# dls_emailer

./: .dockerignore  Dockerfile  pyproject.toml  readme.md
src/: emailer.py  emailer_functions.py
